--- a/003. Video Player/index.html
+++ b/003. Video Player/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/progress.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="shortcut icon" href="#">       <!-- Added this line of code, because I was getting an error of no favicon in console.log-->
   <title>Custom Video Player</title>
 </head>
 <body>
